--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
        - run: echo "Bienvenido a GITHUB Actions"
        - run: echo "Ejecutando en ${{ runner.os }}"
-       - run: echo "Datos de rama ${{ github.ref }} de ${{github.repository}}"
+       - run: echo "Datos de rama ${{ github.ref }} de ${{ github.repository }}"
        - name: Extraer código 
          uses: actions/checkout@v2
        - run: echo "El repositorio ha sido clonado al equipo"
-         name: listar los acrhivos del repo
+       - name: listar los acrhivos del repo
        - run: ls ${{ github.workspace }}
