--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,4 +12,4 @@ jobs:
          uses: actions/checkout@v2
        - run: echo "El repositorio ha sido clonado al equipo"
        - name: listar los acrhivos del repo
-       - run: ls ${{ github.workspace }}
+         run: ls ${{ github.workspace }}
